--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-   <h1>허태정은반성해라<!DOCTYPE html>
-   <html lang="en">
-   <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Document</title>
-   </head>
-   <body>
-       
-   </body>
-   </html></h1> 
+    <h1>허태정은반성해라</h1>
+    <h2>허태정은 손을 들고 순순히 따라라</h2>
+    <h3>싫다</h3> 
+    <h4>타자치기 귀찮은데</h4>
+    <h5>짜증나게하지마</h5>
+    <h6>말조심을 하자</h6>
 </body>
+
 </html>
